--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "chart.js": "^4.4.9",
     "lucide-react": "^0.511.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
